# GSOC-SU2

./: CMakeLists.txt  bindings.cpp  run_python_test.py  testfluidmodel.i
SimpleUnitTest/: README.md  testfluidmodel.cpp  testfluidmodel.hpp
SimpleUnitTest_swig+pybind11/: README.md  _testfluidmodel.py  bindings.cpp  run_python_test.py  testfluidmodel.cpp  testfluidmodel.hpp  testfluidmodel.i  testfluidmodel_wrap.cxx
entropic_data_Air/: result.txt
entropic_data_Air/RBF_Interp/: example.py  rbf_interp.py  testing.py
entropic_data_Air/griddata_method/: griddata_interp.py
flamelet_data/: MethaneFlameletData_LUT.csv  MethaneFlameletData_Validation.csv  README.md  interp.ipynb
pybind_testcase/: CMakeLists.txt  embed_python.cpp
results/: example_mesh  inviscid_flow_with_bump.pvsm
results/TASK2/: RANS_jet.cfg  axisymmetric_jet.su2  example_mesh.su2  history.csv  structured.geo  structured.su2  v_mesh.geo  v_mesh.su2  vol_solution.vtu
results/TASK3/: README.md
results/TASK3/Assignment3/: launch_unsteady_CHT_FlatPlate.py  pysu2.py
results/TASK3/deforming_bump_in_channel/: history.csv  surface_00000.vtu  surface_00001.vtu  vol_solution_00000.vtu  (+1 more)
results/TASK_2/: ASSIGNMENT 2.md  config.cfg  history.csv  mesh.su2  mesh_gen.geo  surface.vtu
test_cases/QuickStart/: README.md  flow.vtu  history.csv  surface_flow.csv
test_cases/axisymmetric_rans/: surface.vtu  vol_solution.vtu
test_cases/turbulentflow_90degbend/: history.csv  surface.csv
test_pybind_classheader/: CMakeLists.txt  README.md  bindings.cpp  calculation.cpp  calculation.hpp  test.py
(+22 files in other folders)
